<resources>
    <string name="app_name">Contact Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_add_person">Add Person</string>
    <string name="title_activity_manage_contact">Manage Contacts</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email_id">Email ID:</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_contact">Add Contact</string>
</resources>
