<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.utdallas.hpt150030.mycontactmanager.ManageContactActivity">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.30"
                android:gravity="right|center_vertical"
                android:text="@string/first_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.70"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.30"
                android:gravity="right|center_vertical"
                android:text="@string/last_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.70"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.30"
                android:gravity="right|center_vertical"
                android:text="@string/phone_number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.70"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.30"
                android:gravity="right|center_vertical"
                android:text="@string/email_id"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emailIdEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.70"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/save_button"/>
            
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/delete_button"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
